// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allow passing a cache 1`] = `null`;

exports[`nested provider 1`] = `
Array [
  <style>
    .emotion-0 {
      color: white;
      padding: 4px;
      background-color: darkgreen;
    }
  </style>,
  <div
    className="emotion-0"
  />,
]
`;

exports[`nested provider with function 1`] = `
Array [
  <style>
    .emotion-0 {
      color: hotpink;
      padding: 8px;
      background-color: darkgreen;
    }
  </style>,
  <div
    className="emotion-0"
  />,
]
`;

exports[`nested provider with function that does not return a function throws the correct error 1`] = `"[@emotion/provider] Please return an object from your theme function, i.e. theme={() => ({})}!"`;

exports[`nested provider with theme value that is not a plain object throws 1`] = `"[@emotion/provider] Please make your theme prop a plain object"`;
